[package]
name = "knxkit"
version = "0.1.2"
edition = "2021"
authors = ["Alexey Aristov <aav@acm.org>"]
license = "EPL-2.0 OR GPL-3.0"
readme = "README.md"
repository = "https://github.com/knxkit/knxkit"
description = "High-level API for KNX devices and networks"
categories = ["network-programming", "api-bindings"]
keywords = ["knx", "iot", "home-automation", "smart-home"]

[dependencies]
nom = "7.1.3"
num-traits = "0.2.12"
num-derive = "0.4.2"
bitflags = "2.6.0"
cookie-factory = "0.3.3"
tokio = { version = "1.42.0", features = ["full"] }
futures = "0.3.31"
tracing = "0.1.41"
roxmltree = "0.20.0"
zip = "2.2"
regex = "1.11"
thiserror = "2.0.9"
hex = "0.4.3"
url = "2.5.4"
dns-lookup = "2.0.4"
macaddr = "1.0.1"
async-stream = "0.3.6"
strum = { version = "0.26.3", features = ["derive"] }

[dev-dependencies]
knxkit_dpt = "0.1.1"
