[package]
name = "knxkit_cli"
version = "0.1.0"
edition = "2021"
autobins = false

[dependencies]
tokio = { version = "1.42", features = ["full"] }
tracing-subscriber = "0.3"
anyhow = "1.0"
tracing = "0.1"
local-ip-address = "0.6"
hex = "0.4"
clap = { version = "4.5", features = ["derive"] }
knxkit = { path = "../knxkit" }
knxkit_dpt = { path = "../knxkit_dpt" }
time = { version = "0.3.37", features = ["formatting", "local-offset"] }
nom = "7.1.3"
url = "2.5.4"
dns-lookup = "2.0.4"
interpolator = { version = "0.5.0", features = ["number"] }

[[bin]]
name = "knx"
path = "src/main.rs"
