[package]
name = "knxkit_dpt"
version = "0.1.1"
edition = "2021"
authors = ["Alexey Aristov <aav@acm.org>"]
license = "EPL-2.0 OR GPL-3.0"
repository = "https://github.com/knxkit/knxkit"
description = "Generated data point definitions for knxkit"
categories = ["network-programming", "api-bindings"]
keywords = ["knx", "iot", "home-automation", "smart-home"]

[dependencies]
knxkit = "0.1.1"
encoding = "0.2.33"
bitstream-io = "2.5"
num-traits = "0.2.19"
thiserror = "2.0.9"
serde = { version = "1.0.216", features = ["serde_derive"] }
serde_json = "1.0.134"
