[package]
name = "knxkit_dptgen"
version = "0.1.0"
edition = "2021"
autobins = false

[dependencies]
quote = "1.0.38"
syn = "2.0.92"
proc-macro2 = "1.0.92"
prettyplease = "0.2.25"
roxmltree = "0.20.0"
clap = { version = "4.5.23", features = ["derive"] }
anyhow = "1.0.95"

knxkit = { path = "../knxkit" }

[[bin]]
name = "dptgen"
path = "src/main.rs"
